--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "prextraffic",
+  "name": "prextraffic-proxy",
   "version": "1.0.0",
-  "main": "firebase.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node proxy.js",
+    "install": "npx playwright install chromium"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
-    "playwright": "^1.51.1"
-  },
-  "description": ""
+    "express": "^4.18.2",
+    "playwright": "^1.40.0"
+  }
 }
