--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "prextraffic-proxy",
+  "name": "url-shortener",
   "version": "1.0.0",
+  "description": "Acortador de URLs profesional",
+  "main": "server.js",
   "scripts": {
-    "start": "node proxy.js",
-    "install": "npx playwright install chromium"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "playwright": "^1.40.0"
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
